--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -266,7 +266,7 @@ input, select, textarea {
 		padding: 0.5em 0 0.5em 2em;
 	}
 
-	code {
+	/*code {
 		background: rgba(144, 144, 144, 0.075);
 		border-radius: 4px;
 		border: solid 1px #c9c9c9;
@@ -288,7 +288,7 @@ input, select, textarea {
 			line-height: 1.75;
 			padding: 1em 1.5em;
 			overflow-x: auto;
-		}
+		}*/
 
 	hr {
 		border: 0;
